index sayfasının düzeltilmesi

--- a/src/emineatar.html
+++ b/src/emineatar.html
@@ -284,7 +284,7 @@
              <div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="single-blog">
 			     <div class="single-blog-img">
-                  <a href="blog-details.html"><img src="img/blog/emineatar/emineatar.jpg" alt=""/>
+                  <a href="blog-details.html"><img src="img/portfolio/12.jpg" alt=""/>
 										</a>
                 </div>
            
