--- a/src/esrameric.html
+++ b/src/esrameric.html
@@ -286,7 +286,7 @@
             <!-- End single blog -->
              <div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="single-blog">
-			     <div class="single-blog-img"><img src="img/blog/esrameric/esrameriç.jpg" alt=""/>
+			     <div class="single-blog-img"><img src="img/portfolio/7.jpg" alt=""/>
                   <a href="blog-details.html">
 										</a>
                 </div>
