--- a/src/gunselicepni.html
+++ b/src/gunselicepni.html
@@ -293,7 +293,7 @@ https://www.zet.com/arama?k=gunselstyle <br/></p>
 				<div class="single-blog">
 			  
                 <div class="single-blog-img">
-                  <a href="blog-details.html"><img src="img/blog/gunseli/gunseli.jpg" alt="balık_makreme_bileklik"/>
+                  <a href="blog-details.html"><img src="img/portfolio/2.jpg" alt=""/>
 										</a>
                 </div>
            
