--- a/src/iletisim.html
+++ b/src/iletisim.html
@@ -265,7 +265,7 @@
               <div class="single-icon">
                 <i class="fa fa-mobile"></i>
                 <p>
-                 0 534 597 02 19<br>
+                0 534 597 02 19<br>
               
                 </p>
               </div>
@@ -277,8 +277,8 @@
               <div class="single-icon">
                 <i class="fa fa-envelope-o"></i>
                 <p>
-                  Email: semraydin@windowslive.com<br>
-                  <span>Web: www.semraninsayfalari.com</span>
+                    semra.izmit@gmail.com<br>
+                  <span> www.semraninsayfalari.com</span>
                 </p>
               </div>
             </div>
