--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,7 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">Takılar, resimler, el işleri, oyuncaklar <br/>çeşit çeşit..</h1>
+                  <h1 class="title2">Takılar</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
@@ -188,7 +188,7 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">Bilgisayar programları ile hazırlanan fotograf manipulasyonları, afiş, davetiye, kartvizit çalışmaları, çizimler, animasyonlar ve site örnekleri</h1>
+                  <h1 class="title2"> Resimler</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
@@ -213,7 +213,7 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">Kitaplar, Güfteler</h1>
+                  <h1 class="title2">El İşleri</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
@@ -237,7 +237,7 @@
                 </div>
                 <!-- layer 2 -->
                 <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">Daha neler neler</h1>
+                  <h1 class="title2">Kitaplar, Güfteler...Daha neler neler</h1>
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
@@ -1072,8 +1072,7 @@ Hobi sayfalarımızda neler neler var.
             <div class="single-team-member">
               <div class="team-img">
                 <a href="#">
-										<img src="img/team/14.jpg" alt="">
-									</a>
+									<img src="img/team/14_.jpg" alt=""/> </a>
                 <div class="team-social-icon text-center">
                   <ul>
                     <li>
@@ -1870,7 +1869,7 @@ Hobi sayfalarımızda neler neler var.
               <div class="single-icon">
                 <i class="fa fa-mobile"></i>
                 <p>
-                 0 534 597 02 19<br>
+                0 534 597 02 19<br>
               
                 </p>
               </div>
@@ -1882,8 +1881,8 @@ Hobi sayfalarımızda neler neler var.
               <div class="single-icon">
                 <i class="fa fa-envelope-o"></i>
                 <p>
-                  Email: semraydin@windowslive.com<br>
-                  <span>Web: www.semraninsayfalari.com</span>
+                   semra.izmit@gmail.com<br>
+                  <span>www.semraninsayfalari.com</span>
                 </p>
               </div>
             </div>
