--- a/src/nesecan.html
+++ b/src/nesecan.html
@@ -282,7 +282,7 @@
                     <div class="single-blog">
                   
                         <div class="single-blog-img">
-                             <a href="blog-details.html"><img src="img/blog/nesecan/neşe-can.jpg" alt=""/>
+                             <a href="blog-details.html"><img src="img/portfolio/1.jpg" alt=""/>
                                                    </a>
                         </div>
                    
