--- a/src/semraaydin_elisleri.html
+++ b/src/semraaydin_elisleri.html
@@ -281,7 +281,7 @@
                 <div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="single-blog">
 			 
-              <a href="blog-details.html"><img src="img/portfolio/semra2.jpg" alt=""/>
+              <a href="blog-details.html"><img src="img/portfolio/18.jpg" alt=""/>
 						
 										</a>
                 <div class="blog-text">
