--- a/src/semrakolat.html
+++ b/src/semrakolat.html
@@ -278,7 +278,7 @@
              <div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="single-blog">
 			     <div class="single-blog-img">
-                  <a href="blog-details.html"><img src="img/blog/semrakolat/Semra-Kolat.jpg" alt=""/>
+                  <a href="blog-details.html"><img src="img/portfolio/16.jpg" alt=""/>
 										</a>
                 </div>
            
