--- a/src/zafercan.html
+++ b/src/zafercan.html
@@ -279,7 +279,7 @@
              <div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="single-blog">
 			     <div class="single-blog-img">
-                  <a href="blog-details.html"><img src="img/blog/nesecan/zafer.jpg" alt=""/>
+                  <a href="blog-details.html"><img src="img/portfolio/10.jpg" alt=""/>
 										</a>
                 </div>
            
