--- a/src/afisdavetiye.html
+++ b/src/afisdavetiye.html
@@ -276,7 +276,7 @@
                        </div>
                      <div class="col-md-6 col-sm-6 col-xs-12">
                            	 <div class="single-blog">
-                         			 <a href="blog-details.html"><img src="img/portfolio/semra2.jpg" alt=""/>
+                         			 <a href="blog-details.html"><img src="img/portfolio/18.jpg" alt=""/>
                            					 <div class="blog-text">
                        					     </div>
                             		<span></span>
