--- a/src/ataruacan.html
+++ b/src/ataruacan.html
@@ -284,7 +284,7 @@
 				<div class="single-blog">
 			  
                 <div class="single-blog-img">
-                  <a href="blog-details.html"><img src="img/team/17.jpg" alt=""/>
+                  <a href="blog-details.html"><img src="img/portfolio/9.jpg" alt=""/>
 										</a>
                 </div>
            
