--- a/src/hakkinda.html
+++ b/src/hakkinda.html
@@ -266,8 +266,7 @@
 				   Zamanla diğer siteleri de internete koydu. 
 			2012 yılında ilk sitesi olan Semra’nın Sayfalarını yayınladı. Bu zamana kadar 5 kere ara yüzünü değiştirdi. <br/> 
 				   www.nalancaart.com, www.temsiltemizlik.net , www.cbysmakina.com, www.kadioğluhukukbürosu.com, www.celikanmuhendislik.com gibi siteleri yer almaktadır.<br/>
-Semra Aydın''ın 
-html, html5, css, dreamweawer, bootstrap, wordpress, photoshop, fireworks, illütrasyon ilgilendiği konulardandır.
+Semra Aydın'ın html, html5, css, dreamweawer, bootstrap, wordpress, photoshop, fireworks, illütrasyon ilgilendiği konulardandır.
                   <br/>
 
                 </div>
