--- a/src/reyhantopaloglu.html
+++ b/src/reyhantopaloglu.html
@@ -282,7 +282,7 @@
              <div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="single-blog">
 			     <div class="single-blog-img">
-                  <a href="blog-details.html"><img src="img/blog/reyhan/reyhan.jpg" alt=""/>
+                  <a href="blog-details.html"><img src="img/portfolio/14.jpg" alt=""/>
 										</a>
                 </div>
            
