--- a/src/selmatombaloglu.html
+++ b/src/selmatombaloglu.html
@@ -281,7 +281,7 @@
              <div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="single-blog">
 			     <div class="single-blog-img">
-                  <a href="blog-details.html"><img src="img/blog/selmatombaloglu/selm.jpg" alt=""/>
+                  <a href="blog-details.html"><img src="img/portfolio/15.jpg" alt=""/>
 										</a>
                 </div>
            
